gen/graamPROBAParser.py
# Generated from C:/Users/martyna/PycharmProjects/teoriaKompilatorow/Emojii-Programming/Grammars/graamPROBA.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class graamPROBAParser ( Parser ):

    grammarFileName = "graamPROBA.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\\u00E2\\u017E\\u2022'", 
                     "'\\u00E2\\u017E\\u2013'", "'\\u00E2\\u015B\\u2013\\u010F\\u00B8\\u0179'", 
                     "'\\u00E2\\u017E\\u2014'", "'\\u0111\\u017A\\u017A\\u00B0'", 
                     "'\\u0111\\u017A\\uFFFD\\u2030'", "'\\u0111\\u017A\\uFFFD\\uFFFD'", 
                     "'\\u0111\\u017A\\uFFFD\\u2020'", "'\\u0111\\u017A\\uFFFD\\u017C\\u010F\\u00B8\\u0179'", 
                     "'%'", "'\\u0111\\u017A\\u00AB\\u00B7'", "'\\u0111\\u017A\\u00AB\\u00B8'", 
                     "'\\u0111\\u017A\\u00AB\\u02DB'", "'\\u0111\\u017A\\u00AB\\u00B1'", 
                     "'\\u0111\\u017A\\u201C\\u017D'", "'\\u0111\\u017A\\u2013\\u2021\\u010F\\u00B8\\u0179'", 
                     "'\\u0111\\u017A\\u201C\\u015A'", "'\\u0111\\u017A\\u017D\\u00AC'", 
                     "'\\u0111\\u017A\\u2022\\u00B5\\u010F\\u00B8\\u0179\\u00E2\\u20AC\\u0164\\u00E2\\u2122\\u20AC\\u010F\\u00B8\\u0179'", 
                     "'\\u0111\\u017A\\u2018\\u00AD'", "'\\u0111\\u017A\\u0164\\u013E'", 
                     "<INVALID>", "'\\u0111\\u017A\\u2013\\u00A8\\u010F\\u00B8\\u0179'", 
                     "'\\u00E2\\u0165\\u2014'", "'\\u00E2\\u0165\\u201C'", 
                     "'\\u00E2\\u0165\\u2014\\u00E2\\u0165\\u2014'", "'\\u00E2\\u0165\\u201C\\u00E2\\u0165\\u2014'", 
                     "'\\u0111\\u017A\\u017D\\uFFFD'", "'\\u0111\\u017A\\u201C\\u00AD'", 
                     "'\\u0111\\u017A\\u0179\\u201D\\u010F\\u00B8\\u0179'", 
                     "'\\u0111\\u017A\\u201C\\u00BB'", "'\\u0111\\u017A\\u015A\\u015E\\u010F\\u00B8\\u0179'", 
                     "'\\u0111\\u017A\\u201C\\u2039'", "'\\u00E2\\u015B\\u2026'", 
                     "'\\u0111\\u017A\\u0161\\u00A6'", "'\\u0111\\u017A\\u2019\\u2020'", 
                     "'\\u0111\\u017A\\u015E\\uFFFD'", "'\\u0111\\u017A\\u2019\\u02C7'", 
                     "'\\u0111\\u017A\\u2018\\u0164'", "'\\u0111\\u017A\\u2018\\u017D'", 
                     "'\\u0111\\u017A\\u201D\\u00AE'", "'\\u0111\\u017A\\u017D\\u0141'", 
                     "'\\u00E2\\u015A\\u203A'", "'\\u0111\\u017A\\u015A\\u2026'", 
                     "'\\u0111\\u017A\\u2019\\u20AC'", "'\\u0111\\u017A\\u015A\\u017D'", 
                     "'\\u0111\\u017A\\u0161\\u203A'", "'\\u0111\\u017A\\u015A\\uFFFD'", 
                     "'\\u0111\\u017A\\u2014\\u2018\\u010F\\u00B8\\u0179'", 
                     "'\\u0103\\u20AC\\u00B0'", "'->'", "'decl'", "<INVALID>", 
                     "'as'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "IDENTIFIER", 
                      "NUMBER", "STRING", "WS", "PLUS", "MINUS", "MULTIPLY", 
                      "DIVIDE", "EQUAL", "GREATER", "SMALLER", "EGREATER", 
                      "ESMALLER", "MOD", "LPAR", "RPAR", "LSQB", "RSQB", 
                      "COMMA", "COLON", "SEMI", "QUOTE", "OR", "AND", "PERCENT", 
                      "COMMENT", "PRINT", "NOT", "IF", "ELSE", "ELIF", "FOR", 
                      "IN", "RANGE", "ENUMERATE", "WHILE", "SWITCH", "CASE", 
                      "BREAK", "CONTINUE", "RETURN", "DEF", "TRUE", "FALSE", 
                      "TRY", "EXCEPT", "FINALLY", "RAISE", "CONST", "IMPORT", 
                      "FROM", "LAMBDA", "NONE", "ECOMPLEMENT", "ARROW", 
                      "DECL", "TYPE", "AS", "BOOLEAN", "CONDITION_OP" ]

    RULE_start = 0
    RULE_stmt = 1
    RULE_simple_stmt = 2
    RULE_assignment_stmt = 3
    RULE_declare_stmt = 4
    RULE_single_declaration = 5
    RULE_import_stmt = 6
    RULE_from_stmt = 7
    RULE_module_name = 8
    RULE_import_list = 9
    RULE_import_name = 10
    RULE_try_stmt = 11
    RULE_except_clause = 12
    RULE_print_stmt = 13
    RULE_multiple_assignment_stmt = 14
    RULE_raise_stmt = 15
    RULE_exception_expr = 16
    RULE_exception_name = 17
    RULE_compound_stmt = 18
    RULE_if_stmt = 19
    RULE_while_stmt = 20
    RULE_for_stmt = 21
    RULE_function_def = 22
    RULE_parameters = 23
    RULE_typed_par = 24
    RULE_loop_stmt = 25
    RULE_func_body = 26
    RULE_flow_stmt = 27
    RULE_return_stmt = 28
    RULE_explist = 29
    RULE_exp = 30
    RULE_arithmeticOperation = 31
    RULE_term = 32
    RULE_factor = 33
    RULE_printOperation = 34
    RULE_conditionalOperation = 35
    RULE_logicalTerm = 36
    RULE_logicalFactor = 37
    RULE_logicalPrimary = 38
    RULE_value = 39

    ruleNames =  [ "start", "stmt", "simple_stmt", "assignment_stmt", "declare_stmt", 
                   "single_declaration", "import_stmt", "from_stmt", "module_name", 
                   "import_list", "import_name", "try_stmt", "except_clause", 
                   "print_stmt", "multiple_assignment_stmt", "raise_stmt", 
                   "exception_expr", "exception_name", "compound_stmt", 
                   "if_stmt", "while_stmt", "for_stmt", "function_def", 
                   "parameters", "typed_par", "loop_stmt", "func_body", 
                   "flow_stmt", "return_stmt", "explist", "exp", "arithmeticOperation", 
                   "term", "factor", "printOperation", "conditionalOperation", 
                   "logicalTerm", "logicalFactor", "logicalPrimary", "value" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    IDENTIFIER=3
    NUMBER=4
    STRING=5
    WS=6
    PLUS=7
    MINUS=8
    MULTIPLY=9
    DIVIDE=10
    EQUAL=11
    GREATER=12
    SMALLER=13
    EGREATER=14
    ESMALLER=15
    MOD=16
    LPAR=17
    RPAR=18
    LSQB=19
    RSQB=20
    COMMA=21
    COLON=22
    SEMI=23
    QUOTE=24
    OR=25
    AND=26
    PERCENT=27
    COMMENT=28
    PRINT=29
    NOT=30
    IF=31
    ELSE=32
    ELIF=33
    FOR=34
    IN=35
    RANGE=36
    ENUMERATE=37
    WHILE=38
    SWITCH=39
    CASE=40
    BREAK=41
    CONTINUE=42
    RETURN=43
    DEF=44
    TRUE=45
    FALSE=46
    TRY=47
    EXCEPT=48
    FINALLY=49
    RAISE=50
    CONST=51
    IMPORT=52
    FROM=53
    LAMBDA=54
    NONE=55
    ECOMPLEMENT=56
    ARROW=57
    DECL=58
    TYPE=59
    AS=60
    BOOLEAN=61
    CONDITION_OP=62

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(graamPROBAParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graamPROBAParser.StmtContext)
            else:
                return self.getTypedRuleContext(graamPROBAParser.StmtContext,i)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = graamPROBAParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.stmt()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 2598735610483179578) != 0)):
                    break

            self.state = 85
            self.match(graamPROBAParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = graamPROBAParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 17, 29, 30, 47, 52, 58, 61]:
                self.state = 87
                self.simple_stmt()
                pass
            elif token in [31, 34, 38, 44]:
                self.state = 88
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Assignment_stmtContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Import_stmtContext,0)


        def try_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Try_stmtContext,0)


        def declare_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Declare_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Print_stmtContext,0)


        def multiple_assignment_stmt(self):
            return self.getTypedRuleContext(graamPROBAParser.Multiple_assignment_stmtContext,0)


        def exp(self):
            return self.getTypedRuleContext(graamPROBAParser.ExpContext,0)


        def COLON(self):
            return self.getToken(graamPROBAParser.COLON, 0)

        def getRuleIndex(self):
            return graamPROBAParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = graamPROBAParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.assignment_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.import_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.try_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.declare_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 95
                self.print_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 96
                self.multiple_assignment_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 97
                self.exp()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 98
                self.exp()
                self.state = 99
                self.match(graamPROBAParser.COLON)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(graamPROBAParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(graamPROBAParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(graamPROBAParser.ExpContext,0)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_assignment_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment_stmt" ):
                listener.enterAssignment_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment_stmt" ):
                listener.exitAssignment_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignment_stmt" ):
                return visitor.visitAssignment_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assignment_stmt(self):

        localctx = graamPROBAParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignment_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(graamPROBAParser.IDENTIFIER)
            self.state = 104
            self.match(graamPROBAParser.EQUAL)
            self.state = 105
            self.exp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Declare_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DECL(self):
            return self.getToken(graamPROBAParser.DECL, 0)

        def single_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graamPROBAParser.Single_declarationContext)
            else:
                return self.getTypedRuleContext(graamPROBAParser.Single_declarationContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(graamPROBAParser.COMMA)
            else:
                return self.getToken(graamPROBAParser.COMMA, i)

        def getRuleIndex(self):
            return graamPROBAParser.RULE_declare_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclare_stmt" ):
                listener.enterDeclare_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclare_stmt" ):
                listener.exitDeclare_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclare_stmt" ):
                return visitor.visitDeclare_stmt(self)
            else:
                return visitor.visitChildren(self)




    def declare_stmt(self):

        localctx = graamPROBAParser.Declare_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declare_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.match(graamPROBAParser.DECL)
            self.state = 108
            self.single_declaration()
            self.state = 113
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 109
                self.match(graamPROBAParser.COMMA)
                self.state = 110
                self.single_declaration()
                self.state = 115
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Single_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(graamPROBAParser.IDENTIFIER, 0)

        def EQUAL(self):
            return self.getToken(graamPROBAParser.EQUAL, 0)

        def exp(self):
            return self.getTypedRuleContext(graamPROBAParser.ExpContext,0)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_single_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSingle_declaration" ):
                listener.enterSingle_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSingle_declaration" ):
                listener.exitSingle_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingle_declaration" ):
                return visitor.visitSingle_declaration(self)
            else:
                return visitor.visitChildren(self)




    def single_declaration(self):

        localctx = graamPROBAParser.Single_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_single_declaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(graamPROBAParser.IDENTIFIER)
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 117
                self.match(graamPROBAParser.EQUAL)
                self.state = 118
                self.exp()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(graamPROBAParser.IMPORT, 0)

        def module_name(self):
            return self.getTypedRuleContext(graamPROBAParser.Module_nameContext,0)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_import_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_stmt" ):
                listener.enterImport_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_stmt" ):
                listener.exitImport_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_stmt" ):
                return visitor.visitImport_stmt(self)
            else:
                return visitor.visitChildren(self)




    def import_stmt(self):

        localctx = graamPROBAParser.Import_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_import_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(graamPROBAParser.IMPORT)
            self.state = 122
            self.module_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class From_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FROM(self):
            return self.getToken(graamPROBAParser.FROM, 0)

        def module_name(self):
            return self.getTypedRuleContext(graamPROBAParser.Module_nameContext,0)


        def IMPORT(self):
            return self.getToken(graamPROBAParser.IMPORT, 0)

        def import_list(self):
            return self.getTypedRuleContext(graamPROBAParser.Import_listContext,0)


        def getRuleIndex(self):
            return graamPROBAParser.RULE_from_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFrom_stmt" ):
                listener.enterFrom_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFrom_stmt" ):
                listener.exitFrom_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFrom_stmt" ):
                return visitor.visitFrom_stmt(self)
            else:
                return visitor.visitChildren(self)




    def from_stmt(self):

        localctx = graamPROBAParser.From_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_from_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(graamPROBAParser.FROM)
            self.state = 125
            self.module_name()
            self.state = 126
            self.match(graamPROBAParser.IMPORT)
            self.state = 127
            self.import_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Module_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(graamPROBAParser.IDENTIFIER)
            else:
                return self.getToken(graamPROBAParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(graamPROBAParser.COMMA)
            else:
                return self.getToken(graamPROBAParser.COMMA, i)

        def getRuleIndex(self):
            return graamPROBAParser.RULE_module_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModule_name" ):
                listener.enterModule_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModule_name" ):
                listener.exitModule_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitModule_name" ):
                return visitor.visitModule_name(self)
            else:
                return visitor.visitChildren(self)




    def module_name(self):

        localctx = graamPROBAParser.Module_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_module_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(graamPROBAParser.IDENTIFIER)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 130
                self.match(graamPROBAParser.COMMA)
                self.state = 131
                self.match(graamPROBAParser.IDENTIFIER)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(graamPROBAParser.Import_nameContext)
            else:
                return self.getTypedRuleContext(graamPROBAParser.Import_nameContext,i)


        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(graamPROBAParser.COLON)
            else:
                return self.getToken(graamPROBAParser.COLON, i)

        def getRuleIndex(self):
            return graamPROBAParser.RULE_import_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_list" ):
                listener.enterImport_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_list" ):
                listener.exitImport_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_list" ):
                return visitor.visitImport_list(self)
            else:
                return visitor.visitChildren(self)




    def import_list(self):

        localctx = graamPROBAParser.Import_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_import_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.import_name()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 138
                self.match(graamPROBAParser.COLON)
                self.state = 139
                self.import_name()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Import_nameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(graamPROBAParser.IDENTIFIER)
            else:
                return self.getToken(graamPROBAParser.IDENTIFIER, i)

        def AS(self):
            return self.getToken(graamPROBAParser.AS, 0)

        def getRuleIndex(self):
            return graamPROBAParser.RULE_import_name

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImport_name" ):
                listener.enterImport_name(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImport_name" ):
                listener.exitImport_name(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImport_name" ):
                return visitor.visitImport_name(self)
            else:
                return visitor.visitChildren(self)




    def import_name(self):

        localctx = graamPROBAParser.Import_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_import_name)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(graamPROBAParser.IDENTIFIER)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==60:
                self.state = 146
                self.match(graamPROBAParser.AS)
                self.state = 147
                self.match(graamPROBAParser.IDENTIFIER)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
